--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,6 +2,7 @@
 opentelemetry = "1.31.0"
 opentelemetry-alpha = "1.31.0-alpha"
 opentelemetry-semconv = "1.21.0-alpha"
+opentelemetry-contrib = "1.31.0-alpha"
 mockito = "5.7.0"
 junit = "5.10.1"
 byteBuddy = "1.14.9"
@@ -26,7 +27,7 @@ opentelemetry-sdk = { module = "io.opentelemetry:opentelemetry-sdk" }
 opentelemetry-exporter-zipkin = { module = "io.opentelemetry:opentelemetry-exporter-zipkin" }
 opentelemetry-exporter-logging = { module = "io.opentelemetry:opentelemetry-exporter-logging" }
 zipkin-sender-okhttp3 = { module = "io.zipkin.reporter2:zipkin-sender-okhttp3", version.ref = "zipkin-reporter" }
-opentelemetry-diskBuffering = "io.opentelemetry.contrib:opentelemetry-disk-buffering:1.31.0-alpha"
+opentelemetry-diskBuffering = { module = "io.opentelemetry.contrib:opentelemetry-disk-buffering", version.ref = "opentelemetry-contrib" }
 
 #Test tools
 opentelemetry-sdk-testing = { module = "io.opentelemetry:opentelemetry-sdk-testing", version.ref = "opentelemetry" }
