--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
-opentelemetry = "1.32.0"
-opentelemetry-alpha = "1.32.0-alpha"
+opentelemetry = "1.31.0"
+opentelemetry-alpha = "1.31.0-alpha"
 opentelemetry-semconv = "1.21.0-alpha"
 opentelemetry-contrib = "1.31.0-alpha"
 mockito = "5.7.0"
@@ -28,6 +28,7 @@ opentelemetry-exporter-zipkin = { module = "io.opentelemetry:opentelemetry-expor
 opentelemetry-exporter-logging = { module = "io.opentelemetry:opentelemetry-exporter-logging" }
 zipkin-sender-okhttp3 = { module = "io.zipkin.reporter2:zipkin-sender-okhttp3", version.ref = "zipkin-reporter" }
 opentelemetry-diskBuffering = { module = "io.opentelemetry.contrib:opentelemetry-disk-buffering", version.ref = "opentelemetry-contrib" }
+opentelemetry-exporter-otlp = { module = "io.opentelemetry:opentelemetry-exporter-otlp", version.ref = "opentelemetry" }
 
 #Test tools
 opentelemetry-sdk-testing = { module = "io.opentelemetry:opentelemetry-sdk-testing", version.ref = "opentelemetry" }
