--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,6 +9,7 @@ byteBuddy = "1.14.10"
 okhttp = "4.12.0"
 spotless = "6.23.3"
 zipkin-reporter = "2.17.0"
+kotlin = "1.9.21"
 
 [libraries]
 opentelemetry-platform = { module = "io.opentelemetry.instrumentation:opentelemetry-instrumentation-bom-alpha", version.ref = "opentelemetry-alpha" }
@@ -55,6 +56,7 @@ nullaway-plugin = "net.ltgt.gradle:gradle-nullaway-plugin:1.6.0"
 animalsniffer-plugin = "ru.vyarus:gradle-animalsniffer-plugin:1.7.1"
 android-plugin = "com.android.tools.build:gradle:8.2.0"
 byteBuddy-plugin = { module = "net.bytebuddy:byte-buddy-gradle-plugin", version.ref = "byteBuddy" }
+kotlin-plugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
 
 [bundles]
 mockito = ["mockito-core", "mockito-junit-jupiter"]
