--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,11 +27,38 @@ jobs:
       - name: Set environment variables
         run: |
           version=$(.github/scripts/get-version.sh)
-          echo "VERSION=$version" >> $GITHUB_ENV
+          if [[ $version =~ ^([0-9]+)\.([0-9]+)\.([0-9]+) ]]; then
+            major="${BASH_REMATCH[1]}"
+            minor="${BASH_REMATCH[2]}"
+            patch="${BASH_REMATCH[3]}"
+          else
+            echo "unexpected version: $version"
+            exit 1
+          fi
+          if [[ $patch == 0 ]]; then
+            if [[ $minor == 0 ]]; then
+              prior_major=$((major - 1))
+              prior_minor=$(grep -Po "^## Version $prior_major.\K[0-9]+" CHANGELOG.md | head -1)
+              prior_version="$prior_major.$prior_minor"
+            else
+              prior_version="$major.$((minor - 1)).0"
+            fi
+          else
+            prior_version="$major.$minor.$((patch - 1))"
+          fi
           inst_version=$(grep ^opentelemetry-alpha gradle/libs.versions.toml | sed -E "s/^.*\"(.*)\"/\1/")
-          echo "INST_VERSION=$inst_version" >> $GITHUB_ENV
           sdk_version=$(cat gradle/libs.versions.toml  | grep "^opentelemetry =" | sed -E "s/^.*\"(.*)\"/\1/")
+          
+          echo "VERSION=$version" >> $GITHUB_ENV
+          echo "PRIOR_VERSION=$prior_version" >> $GITHUB_ENV
+          echo "INST_VERSION=$inst_version" >> $GITHUB_ENV
           echo "OTEL_SDK_VERSION=$sdk_version" >> $GITHUB_ENV
+
+        # check out main branch to verify there won't be problems with merging the change log
+        # at the end of this workflow
+      - uses: actions/checkout@v4
+        with:
+          ref: main
 
       - name: Check that change log update was merged to main
         run: |
@@ -42,6 +69,12 @@ jobs:
               exit 1
             fi
           fi
+
+      # back to the release branch
+      - uses: actions/checkout@v4
+        with:
+          # tags are needed for the generate-release-contributors.sh script
+          fetch-depth: 0
 
       - name: Set up JDK for running Gradle
         uses: actions/setup-java@v4
@@ -58,8 +91,24 @@ jobs:
           GPG_PASSWORD: ${{ secrets.GPG_PASSWORD }}
 
       - name: Generate release notes
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          echo ok
+          .github/scripts/generate-release-notes.sh "$VERSION" "$PRIOR_VERSION" "$INST_VERSION" "$OTEL_SDK_VERSION"
+
+      - id: create-github-release
+        name: Create GitHub release
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          cp android-agent/build/outputs/aar/opentelemetry-android.aar opentelemetry-android.aar
+          gh release create --target $GITHUB_REF_NAME \
+                            --title "Version $VERSION" \
+                            --notes-file /tmp/release-notes.txt \
+                            v$VERSION \
+                            opentelemetry-android.aar
+
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
 
       - name: Create release tag for release builds
         env:
