--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -20,6 +20,7 @@ constraintlayout = "2.1.4"
 navigationFragmentKtx = "2.7.7"
 navigationUiKtx = "2.7.7"
 opentelemetryExtensionTracePropagatorsVersion = "1.24.0"
+preferenceVersion = "1.2.1"
 retrofitVersion = "2.9.0"
 rxandroidVersion = "2.1.1"
 rxjavaVersion = "2.2.21"
@@ -27,6 +28,7 @@ rxrelayVersion = "2.1.1"
 timberVersion = "5.0.1"
 
 [libraries]
+androidx-preference = { module = "androidx.preference:preference", version.ref = "preferenceVersion" }
 autodispose = { module = "com.uber.autodispose:autodispose", version.ref = "autodisposeVersion" }
 autodispose-android = { module = "com.uber.autodispose:autodispose-android", version.ref = "autodisposeVersion" }
 autodispose-android-archcomponents = { module = "com.uber.autodispose:autodispose-android-archcomponents", version.ref = "autodisposeVersion" }
