--- a/demo-app/src/main/AndroidManifest.xml
+++ b/demo-app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.BackpackingBuddy"
+        android:theme="@style/Theme.DemoApp"
         android:usesCleartextTraffic="true"
         android:networkSecurityConfig="@xml/network_security_config"
         tools:targetApi="31">
@@ -21,7 +21,7 @@
             android:name="io.opentelemetry.android.demo.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.BackpackingBuddy">
+            android:theme="@style/Theme.DemoApp">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
