limit only to lines starting with a digit

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,7 +45,7 @@ jobs:
           # otel instrumentation version comes in through alpha bom
           inst_version=$(./gradlew --console=plain android-agent:dependencies | \
                         grep 'io.opentelemetry.instrumentation:opentelemetry-instrumentation-api ' | \
-                        sed -e "s/.* -> //" | sed -e "s/ .*//" | \
+                        sed -e "s/.* -> //" | sed -e "s/ .*//" | grep '^\d' | \
                         sort | head -1)
           # otel-java core libs are transient deps thru instrumentation boms
           sdk_version=$(./gradlew --console=plain android-agent:dependencies | \
