--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,7 +11,9 @@ okhttp = "5.1.0"
 spotless = "7.2.1"
 kotlin = "2.2.0"
 androidPlugin = "8.12.0"
+kspPlugin = "2.2.0-2.0.2"
 junitKtx = "1.3.0"
+autoServiceProcessor = "1.2.0"
 autoService = "1.1.1"
 androidx-navigation = "2.7.7"
 compose = "1.5.4"
@@ -47,7 +49,7 @@ opentelemetry-processors = { module = "io.opentelemetry.contrib:opentelemetry-pr
 opentelemetry-exporter-otlp = { module = "io.opentelemetry:opentelemetry-exporter-otlp" }
 volley = "com.android.volley:volley:1.2.1"
 auto-service-annotations = { module = "com.google.auto.service:auto-service-annotations", version.ref = "autoService" }
-auto-service-processor = { module = "com.google.auto.service:auto-service", version.ref = "autoService" }
+auto-service-processor = { module = "dev.zacsweers.autoservice:auto-service-ksp", version.ref = "autoServiceProcessor" }
 compose = { group = "androidx.compose.ui", name = "ui", version.ref = "compose" }
 detekt-plugin = { module = "io.gitlab.arturbosch.detekt:detekt-gradle-plugin", version.ref = "detekt" }
 binary-compat-validator = { module = "org.jetbrains.kotlinx:binary-compatibility-validator", version.ref = "binaryCompatValidator" }
@@ -83,6 +85,7 @@ animalsniffer-plugin = "ru.vyarus:gradle-animalsniffer-plugin:2.0.1"
 android-plugin = { module = "com.android.tools.build:gradle", version.ref = "androidPlugin" }
 byteBuddy-plugin = { module = "net.bytebuddy:byte-buddy-gradle-plugin", version.ref = "byteBuddy" }
 kotlin-plugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
+ksp-plugin = { module = "com.google.devtools.ksp:symbol-processing-gradle-plugin", version.ref = "kspPlugin" }
 androidx-junit-ktx = { group = "androidx.test.ext", name = "junit-ktx", version.ref = "junitKtx" }
 
 [bundles]
