--- a/demo-app/gradle.properties
+++ b/demo-app/gradle.properties
@@ -1,3 +1,9 @@
-org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xmx4096M -XX:+UseParallelGC -XX:MaxMetaspaceSize=2g -Dfile.encoding=UTF-8 -Dkotlin.daemon.jvm.options\="-Xmx4096M"
+org.gradle.parallel=true
+org.gradle.caching=true
+org.gradle.configuration-cache=true
+org.gradle.configuration-cache.problems=fail
+org.gradle.configuration-cache.parallel=true
+
 android.useAndroidX=true
 android.useFullClasspathForDexingTransform=true
