--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -29,7 +29,9 @@ jobs:
         working-directory: ./demo-app
         run: ./gradlew check assemble
       - name: publish snapshot
-        run: ./gradlew publishToSonatype
+        # See https://youtrack.jetbrains.com/projects/KT/issues/KT-79047/Gradle-compileKotlin-fails-with-configuration-cache for why this is needed
+        # We may be able to remove this when gradle 9.1 lands.
+        run: ./gradlew publishToSonatype -Pkotlin.incremental=false
         env:
           SONATYPE_USER: ${{ secrets.SONATYPE_USER }}
           SONATYPE_KEY: ${{ secrets.SONATYPE_KEY }}
