update robolectric version, remove lollipop, fix voley test.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -30,6 +30,7 @@ androidx-core = "androidx.core:core:1.17.0"
 androidx-annotation = "androidx.annotation:annotation:1.9.1"
 androidx-lifecycle-process = "androidx.lifecycle:lifecycle-process:2.9.2"
 androidx-preference-ktx = "androidx.preference:preference-ktx:1.2.1"
+apache-httpcore = "org.apache.httpcomponents:httpcore:4.4.16"
 findbugs-jsr305 = "com.google.code.findbugs:jsr305:3.0.2"
 byteBuddy = { module = "net.bytebuddy:byte-buddy", version.ref = "byteBuddy" }
 okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
