--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,6 +19,7 @@ androidx-navigation = "2.7.7"
 compose = "1.5.4"
 detekt = "1.23.8"
 binaryCompatValidator = "0.18.1"
+fragment = "1.8.9"
 koverGradlePlugin = "0.9.1"
 
 [libraries]
@@ -31,6 +32,8 @@ androidx-core = "androidx.core:core:1.17.0"
 androidx-annotation = "androidx.annotation:annotation:1.9.1"
 androidx-lifecycle-process = "androidx.lifecycle:lifecycle-process:2.9.3"
 androidx-preference-ktx = "androidx.preference:preference-ktx:1.2.1"
+androidx-fragment = { module = "androidx.fragment:fragment", version.ref="fragment" }
+
 # TODO: Remove this apache httpcomponents dep when volley instrumentation is removed
 apache-httpcore = "org.apache.httpcomponents:httpcore:4.4.16"
 findbugs-jsr305 = "com.google.code.findbugs:jsr305:3.0.2"
